框架适配 jdk15，只使用新版界面